--- a/builds/rhel9-bootc-edgemanager-pos-prod/Containerfile
+++ b/builds/rhel9-bootc-edgemanager-pos-prod/Containerfile
@@ -1,11 +1,13 @@
 FROM registry.redhat.io/rhel9/rhel-bootc:9.5
 
 # Install flightctl agent
-RUN dnf -y copr enable @redhat-et/flightctl && \
-    dnf -y install flightctl-agent && \
+RUN rm -f /etc/rhsm-host
+RUN dnf \
+    --enablerepo=rhacm-2.13-for-rhel-9-x86_64-rpms \
+    install -y \
+    flightctl-agent-0.5.1-2.el9fc && \
     dnf -y clean all && \
-    systemctl enable flightctl-agent.service && \
-    systemctl mask bootc-fetch-apply-updates.timer
+    rm -rf /var/cache/dnf/*
 
 # Add flightctl agent config
 ADD .flightctl-agent-config/config.yaml /etc/flightctl/
