--- a/builds/rhel9-bootc-edgemanager-base/Containerfile
+++ b/builds/rhel9-bootc-edgemanager-base/Containerfile
@@ -1,13 +1,13 @@
 FROM quay.io/jswanson/rhel-bootc-flightctl-agent:9.5
 
 # Install flightctl agent
-RUN rm -f /etc/rhsm-host
-RUN dnf \
-    --enablerepo=rhacm-2.13-for-rhel-9-x86_64-rpms \
-    install -y \
-    flightctl-agent-0.5.1-2.el9fc && \
-    dnf -y clean all && \
-    rm -rf /var/cache/dnf/*
+# RUN rm -f /etc/rhsm-host
+# RUN dnf \
+#     --enablerepo=rhacm-2.13-for-rhel-9-x86_64-rpms \
+#     install -y \
+#     flightctl-agent-0.5.1-2.el9fc && \
+#     dnf -y clean all && \
+#     rm -rf /var/cache/dnf/*
 
 # Add flightctl agent config
 ADD .flightctl-agent-config/config.yaml /etc/flightctl/
