move to different namespace

--- a/charts/acm-rhem/templates/clusterrolebinding.yaml
+++ b/charts/acm-rhem/templates/clusterrolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: console-patch-sa
-    namespace: student-services
+    namespace: open-cluster-management
