--- a/charts/acm-rhem/templates/serviceaccount.yaml
+++ b/charts/acm-rhem/templates/serviceaccount.yaml
@@ -3,4 +3,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: console-patch-sa
-  namespace: student-services
+  namespace: open-cluster-management
