use quay.io/rhpds instead of personal

--- a/builds/rhel9-bootc-edgemanager-pos-prod/deployment.yaml
+++ b/builds/rhel9-bootc-edgemanager-pos-prod/deployment.yaml
@@ -14,7 +14,6 @@ spec:
     spec:
       containers:
       - name: point-of-sale
-        image: quay.io/jswanson/pos-v1-prod:1.0.0
+        image: quay.io/rhpds/pos-v1-prod:1.0.0
         ports:
           - containerPort: 8080
-      
