update job and add comments

--- a/charts/create-flightctl-agent-config/templates/job.yaml
+++ b/charts/create-flightctl-agent-config/templates/job.yaml
@@ -21,17 +21,26 @@ spec:
               cd /tmp
               FLIGHTCTL_USERNAME=$(cat /tmp/openshift-auth/username)
               FLIGHTCTL_PASSWORD=$(cat /tmp/openshift-auth/password)
+
+              # Wait for route to become available
               until FLIGHTCTL_API_URL=$(oc get route flightctl-api-route -n open-cluster-management -o go-template='{{ "{{" }}.spec.host{{ "}}" }}') && [ -n "$FLIGHTCTL_API_URL" ]; do
                 echo "Route not found, retrying in 5 seconds..."
                 sleep 5
               done
 
+              # Wait until login to flightctl works
               until flightctl login "https://$FLIGHTCTL_API_URL" --username "$FLIGHTCTL_USERNAME" --password "$FLIGHTCTL_PASSWORD" --insecure-skip-tls-verify; do
                 echo "Login failed, retrying in 5 seconds..."
                 sleep 5
               done
 
-              flightctl certificate request --signer=enrollment --expiration=365d --output=embedded > config.yaml
+              # Attempt to get certificate, and retry if unsuccessful
+              until flightctl certificate request --signer=enrollment --expiration=365d --output=embedded > config.yaml; do
+                echo "Certificate request failed, retrying in 5 seconds..."
+                sleep 5
+              done
+
+              # Add enrollment request and configs into a configMap that builds will use later
               echo '---
               apiVersion: v1
               kind: ConfigMap
