--- a/builds/flightctl-cli/Containerfile
+++ b/builds/flightctl-cli/Containerfile
@@ -2,7 +2,7 @@ FROM registry.redhat.io/openshift4/ose-cli:latest
 
 USER 0
 
-RUN curl -L https://github.com/flightctl/flightctl/releases/latest/download/flightctl-linux-amd64 --output /usr/local/bin/flightctl
+RUN curl -L https://github.com/flightctl/flightctl/releases/download/v0.5.1/flightctl-linux-amd64 --output /usr/local/bin/flightctl
 
 RUN chmod +x /usr/local/bin/flightctl
 
